Initial Plone 5 support with lot of open issues
* Some CSS resource icon are missing (using Fontello as Plone do is not probably a good choice
* CSRF issues
* Error due to missing ILanguage interface implementation
* Folder contents link is not available everywhere
* TinyMCE is not opened

--- a/Products/PloneGazette/browser/static/css/types-codes.css
+++ b/Products/PloneGazette/browser/static/css/types-codes.css
@@ -1,2 +1,5 @@
 
-.contenttype-newslettertheme:before { content: '\e802'; } /* '' */
+.contenttype-newslettertheme:before { content: '\e800'; } /* '' */
+.contenttype-newsletterbtree:before { content: '\e801'; } /* '' */
+.contenttype-newsletter:before { content: '\e802'; } /* '' */
+.contenttype-subscriber:before { content: '\e803'; } /* '' */
