--- a/Products/PloneGazette/browser/static/css/plonegazette-embedded.css
+++ b/Products/PloneGazette/browser/static/css/plonegazette-embedded.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: 'plonegazette';
-  src: url('../font/plonegazette.eot?33355553');
-  src: url('../font/plonegazette.eot?33355553#iefix') format('embedded-opentype'),
-       url('../font/plonegazette.svg?33355553#plonegazette') format('svg');
+  src: url('../++resource++plonegazette-static/font/plonegazette.eot?33355553');
+  src: url('../++resource++plonegazette-static/font/plonegazette.eot?33355553#iefix') format('embedded-opentype'),
+       url('../++resource++plonegazette-static/font/plonegazette.svg?33355553#plonegazette') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'plonegazette';
-    src: url('../font/plonegazette.svg?33355553#plonegazette') format('svg');
+    src: url('../++resource++plonegazette-static/font/plonegazette.svg?33355553#plonegazette') format('svg');
   }
 }
 */
