--- a/Products/PloneGazette/browser/static/css/plonegazette.css
+++ b/Products/PloneGazette/browser/static/css/plonegazette.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'plonegazette';
-  src: url('../font/plonegazette.eot?61343191');
-  src: url('../font/plonegazette.eot?61343191#iefix') format('embedded-opentype'),
-       url('../font/plonegazette.woff?61343191') format('woff'),
-       url('../font/plonegazette.ttf?61343191') format('truetype'),
-       url('../font/plonegazette.svg?61343191#plonegazette') format('svg');
+  src: url('../++resource++plonegazette-static/font/plonegazette.eot?61343191');
+  src: url('../++resource++plonegazette-static/font/plonegazette.eot?61343191#iefix') format('embedded-opentype'),
+       url('../++resource++plonegazette-static/font/plonegazette.woff?61343191') format('woff'),
+       url('../++resource++plonegazette-static/font/plonegazette.ttf?61343191') format('truetype'),
+       url('../++resource++plonegazette-static/font/plonegazette.svg?61343191#plonegazette') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,7 +14,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'plonegazette';
-    src: url('../font/plonegazette.svg?61343191#plonegazette') format('svg');
+    src: url('../++resource++plonegazette-static/font/plonegazette.svg?61343191#plonegazette') format('svg');
   }
 }
 */
