--- a/Products/PloneGazette/browser/static/css/types-ie7-codes.css
+++ b/Products/PloneGazette/browser/static/css/types-ie7-codes.css
@@ -1,2 +1,5 @@
 
-.contenttype-newslettertheme { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.contenttype-newslettertheme { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe800;&nbsp;'); }
+.contenttype-newsletterbtree { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe801;&nbsp;'); }
+.contenttype-newsletter { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe802;&nbsp;'); }
+.contenttype-subscriber { *zoom: expression( this.runtimeStyle['zoom'] = '1', this.innerHTML = '&#xe803;&nbsp;'); }
